se coloca un logo

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="plugins/js/bootstrap.bundle.min.js"></script>
 
     <link href="plugins/css/style.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
   </head>
   <body>
     <nav class="navbar navbar-expand-sm  navbar-dark  fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="#"><img src="img/favicon.png" class="img img-logo" alt="" srcset=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
