error al cerrar una imagen

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div>
                             <div class="card" style="width:300%">
-                                <img class="card-img-top" src=img/modulos/azul.png" >
+                                <img class="card-img-top" src="img/modulos/azul.png" >
                             </div>
                         </div>
                         <div>
